// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染三种模式下的输入框 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1remrem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875rem;
}

.c2 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1remrem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c2 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-ms-clear {
  display: none;
}

.c2 > input:focus {
  outline: 0;
}

.c2 > input:invalid {
  box-shadow: none;
}

.c5 {
  position: relative;
  background-color: rgba(0,0,0,0.09);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c5:hover {
  background-color: rgba(0,0,0,0.13);
  cursor: pointer;
}

.c5::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c5::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c5:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c5 > input,
.c5 > textarea {
  padding: 27px 12px 10px;
}

.c8 {
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 8px;
  pointer-events: none;
  box-sizing: border-box;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c9 {
  width: auto;
  text-align: left;
  padding: 0;
  line-height: 11px;
  -webkit-transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c7 {
  position: relative;
  border-radius: 4px;
}

.c7 > fieldset {
  border-color: rgba(0,0,0,0.38);
}

.c7:hover > fieldset {
  border-color: rgba(0,0,0,0.87);
}

.c7 > input,
.c7 > textarea {
  padding: 18.5px 14px;
}

.c1 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c4 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c6 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c3 {
  color: rgba(0,0,0,0.87);
}

.c3::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c3::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c3:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

label ~ .c3 {
  margin-top: 16px;
}

.c3::before,
.c3::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0px;
  padding: 0;
  margin: 0;
  border: 0px;
  position: relative;
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1 sinoui-input-label"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c3 sinoui-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c4 sinoui-input-label sinoui-input-label--filled"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c5 sinoui-filled-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c6 sinoui-input-label sinoui-input-label--outlined"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c7 sinoui-outlined-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="c8"
      >
        <legend
          className="c9"
          style={
            Object {
              "width": "auto",
            }
          }
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`渲染不可用状态下三种形态输入框 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: default;
  color: rgba(0,0,0,0.87);
  font-size: 1remrem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875rem;
}

.c2 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1remrem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.38);
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
  opacity: 1;
}

.c2 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-ms-clear {
  display: none;
}

.c2 > input:focus {
  outline: 0;
}

.c2 > input:invalid {
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: rgba(0,0,0,0.09);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  background-color: rgba(0,0,0,0.12);
}

.c6::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c6::after {
  height: 0px;
}

.c6::before {
  background-color: rgba(0,0,0,0.06);
}

.c6 > input,
.c6 > textarea {
  padding: 27px 12px 10px;
}

.c10 {
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 8px;
  pointer-events: none;
  box-sizing: border-box;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c11 {
  width: auto;
  text-align: left;
  padding: 0;
  line-height: 11px;
  -webkit-transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c9 {
  position: relative;
  border-radius: 4px;
}

.c9 > fieldset {
  border-color: rgba(0,0,0,0.38);
}

.c9:hover > fieldset {
  border-color: rgba(0,0,0,0.87);
}

.c9.c9 > fieldset {
  border-color: rgba(0,0,0,0.06);
}

.c9 > input,
.c9 > textarea {
  padding: 18.5px 14px;
  padding-top: 10.5px;
  padding-bottom: 10.5px;
}

.c1 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  color: rgba(0,0,0,0.38);
}

.c5 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  color: rgba(0,0,0,0.38);
}

.c8 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transform: translate(14px,12px) scale(1);
  -ms-transform: translate(14px,12px) scale(1);
  transform: translate(14px,12px) scale(1);
  color: rgba(0,0,0,0.38);
}

.c3 {
  color: rgba(0,0,0,0.38);
}

.c3::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c3::before {
  background: transparent;
  background-image: linear-gradient( to right,rgba(0,0,0,0.42) 33%,transparent 0% );
  background-position: left top;
  background-repeat: repeat-x;
  background-size: 5px 1px;
}

label ~ .c3 {
  margin-top: 16px;
}

.c3::before,
.c3::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
  color: rgba(0,0,0,0.38);
}

.c7 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
  color: rgba(0,0,0,0.38);
  margin: 8px 14px 0;
}

.c12 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 4px;
  color: rgba(0,0,0,0.38);
  margin: 8px 14px 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0px;
  padding: 0;
  margin: 0;
  border: 0px;
  position: relative;
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1 sinoui-input-label sinoui-input-label--disabled"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c3 sinoui-input sinoui-input--disabled"
      data-testid="baseInput"
      disabled={true}
      onClick={[Function]}
    >
      <input
        disabled={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c4"
    >
      输入用户名
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c5 sinoui-input-label sinoui-input-label--disabled sinoui-input-label--filled"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c6 sinoui-filled-input sinoui-filled-input--disabled"
      data-testid="baseInput"
      disabled={true}
      onClick={[Function]}
    >
      <input
        disabled={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c7"
    >
      输入用户名
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c8 sinoui-input-label sinoui-input-label--disabled sinoui-input-label--outlined sinoui-input-label--dense"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c9 sinoui-outlined-input sinoui-outlined-input--disabled sinoui-outlined-input--dense"
      data-testid="baseInput"
      disabled={true}
      onClick={[Function]}
    >
      <input
        disabled={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="c10"
      >
        <legend
          className="c11"
          style={
            Object {
              "width": "auto",
            }
          }
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      className="c12"
    >
      输入用户名
    </p>
  </div>
</div>
`;

exports[`渲染有辅助性文字的输入框 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1remrem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875rem;
}

.c2 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1remrem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c2 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-ms-clear {
  display: none;
}

.c2 > input:focus {
  outline: 0;
}

.c2 > input:invalid {
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: rgba(0,0,0,0.09);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c6:hover {
  background-color: rgba(0,0,0,0.13);
  cursor: pointer;
}

.c6::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c6::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c6:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c6 > input,
.c6 > textarea {
  padding: 27px 12px 10px;
}

.c10 {
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 8px;
  pointer-events: none;
  box-sizing: border-box;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c11 {
  width: auto;
  text-align: left;
  padding: 0;
  line-height: 11px;
  -webkit-transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c9 {
  position: relative;
  border-radius: 4px;
}

.c9 > fieldset {
  border-color: rgba(0,0,0,0.38);
}

.c9:hover > fieldset {
  border-color: rgba(0,0,0,0.87);
}

.c9 > input,
.c9 > textarea {
  padding: 18.5px 14px;
}

.c1 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c5 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c8 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c3 {
  color: rgba(0,0,0,0.87);
}

.c3::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c3::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c3:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

label ~ .c3 {
  margin-top: 16px;
}

.c3::before,
.c3::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
}

.c7 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
  margin: 8px 14px 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0px;
  padding: 0;
  margin: 0;
  border: 0px;
  position: relative;
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1 sinoui-input-label"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c3 sinoui-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c4"
    >
      输入用户名
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c5 sinoui-input-label sinoui-input-label--filled"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c6 sinoui-filled-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c7"
    >
      输入用户名
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c8 sinoui-input-label sinoui-input-label--outlined"
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c9 sinoui-outlined-input"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="c10"
      >
        <legend
          className="c11"
          style={
            Object {
              "width": "auto",
            }
          }
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      className="c7"
    >
      输入用户名
    </p>
  </div>
</div>
`;

exports[`渲染有错误提示的输入框 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1remrem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875rem;
}

.c2 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1remrem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c2 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input::-ms-clear {
  display: none;
}

.c2 > input:focus {
  outline: 0;
}

.c2 > input:invalid {
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: rgba(0,0,0,0.09);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c6::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c6.c6::after {
  background-color: #f44336;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c6 > input,
.c6 > textarea {
  padding: 27px 12px 10px;
}

.c10 {
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 8px;
  pointer-events: none;
  box-sizing: border-box;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c11 {
  width: auto;
  text-align: left;
  padding: 0;
  line-height: 11px;
  -webkit-transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: width 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c9 {
  position: relative;
  border-radius: 4px;
}

.c9 > fieldset {
  border-color: rgba(0,0,0,0.38);
}

.c9:hover > fieldset {
  border-color: rgba(0,0,0,0.87);
}

.c9.c9 > fieldset {
  border-color: #f44336;
}

.c9 > input,
.c9 > textarea {
  padding: 18.5px 14px;
}

.c1 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  color: #f44336;
}

.c1::after {
  content: '*';
  padding: 4px;
}

.c5 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  color: #f44336;
}

.c5::after {
  content: '*';
  padding: 4px;
}

.c8 {
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  position: absolute;
  left: 0;
  top: 0;
  color: rgba(0,0,0,0.6);
  line-height: 1;
  font-size: 1remrem;
  -webkit-transform: translate(0,24px) scale(1);
  -ms-transform: translate(0,24px) scale(1);
  transform: translate(0,24px) scale(1);
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  z-index: 1;
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  color: #f44336;
}

.c8::after {
  content: '*';
  padding: 4px;
}

.c3 {
  color: rgba(0,0,0,0.87);
}

.c3.c3::after {
  background-color: #f44336;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c3::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

label ~ .c3 {
  margin-top: 16px;
}

.c3::before,
.c3::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
  color: #f44336;
}

.c7 {
  color: rgba(0,0,0,0.6);
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75remrem;
  text-align: left;
  line-height: 0.75rem;
  min-height: 0.75rem;
  margin: 0;
  margin-top: 8px;
  color: #f44336;
  margin: 8px 14px 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0px;
  padding: 0;
  margin: 0;
  border: 0px;
  position: relative;
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1 sinoui-input-label sinoui-input-label--error"
      required={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c3 sinoui-input sinoui-input--error"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        aria-required={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c4"
    >
      必填
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c5 sinoui-input-label sinoui-input-label--error sinoui-input-label--filled"
      required={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c6 sinoui-filled-input sinoui-filled-input--error"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        aria-required={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="c7"
    >
      必填
    </p>
  </div>
  <div
    className="c0"
  >
    <label
      className="c8 sinoui-input-label sinoui-input-label--error sinoui-input-label--outlined"
      required={true}
    >
      用户名
    </label>
    <div
      className="c2 sinoui-base-input__layout c9 sinoui-outlined-input sinoui-outlined-input--error"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <input
        aria-required={true}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="c10"
      >
        <legend
          className="c11"
          style={
            Object {
              "width": "auto",
            }
          }
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      className="c7"
    >
      必填
    </p>
  </div>
</div>
`;
